--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,13 @@ buildscript {
 
 apply plugin: 'java'
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
 
+implementation 'junit:junit:4.12'
 }
 
 
