--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,5 @@ include 'kodilla-hibernate'
 include 'kodilla-spring-web'
 include 'kodilla-sudoku'
 include 'kodilla-patterns-part2'
+include 'kodilla-testing2'
 
