--- a/kodilla-spring-web/build.gradle
+++ b/kodilla-spring-web/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'org.springframework.boot'
-    id 'io.spring.dependency-management'
     id 'java'
 }
 
-group = 'com.example'
+apply plugin: 'io.spring.dependency-management'
+
+group = 'com.kodilla'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -13,12 +14,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    compile('org.springframework.boot:spring-boot-starter-web')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
-test {
-    useJUnitPlatform()
-}
