--- a/kodilla-patterns-part2/build.gradle
+++ b/kodilla-patterns-part2/build.gradle
@@ -25,6 +25,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'junit:junit:4.12'
     compile 'org.springframework.boot:spring-boot-starter'
     compile 'org.springframework.boot:spring-boot-starter-aop'
     testCompile'org.springframework.boot:spring-boot-starter-test'
